<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">studio_APP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="mod">類別一</string>
   <string name="title1">EX:吃藥</string>
    <string name="text1">內容.........................................
        ...............................................................</string>
    <string name="timeSeted">鬧鈴時間:12/25_14:30</string>
    <string name="note_Title">標題</string>
    <string name="note_content">內容</string>
    <string name="time_title">鬧鈴模式</string>
    <string name="reciprocal">倒數</string>
    <string name="date">日期</string>
    <string name="choose_date">選擇日期</string>
    <string name="show_date">請選擇模式跟時間</string>
    <string name="menu_mod">類別</string>
    <string name="process_title">標題</string>
    <string name="process_time">時間</string>
</resources>
